progressive web app

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<title>Freedompop Usage</title>
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" href="css/style.css">
+  	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="./img/favicon.ico">
+  	<meta name="theme-color" content="#000">
+    <link rel="manifest" href="./manifest.json">
+
 </head>
 <body>
 	<nav class="nav">
@@ -20,20 +23,20 @@
   <div class="container">
     <div class="hero hide" id="dataDiv">
       <div class="row">
-        <h3 id="userName">salvacams@gmail.com</h3>
+        <h3 id="userDiv"></h3>
 				<a class="btn btn-c btn-sm smooth right" href="#" id="logout">Sign out</a>
 				<p>Datos consumidos:<p/>
 				<p><b id="planLimitUsed"></b> MB de <b id="totalLimit"></b> MB (<b id="percentUsed"></b><b>%</b>)</p>
-				<p>Fecha:</p>
-				<p>Desde <b id="startTime"></b> al <b id="endTime"></b></p>
+				<p>Del <b id="startTime"></b> al <b id="endTime"></b></p>
+				<a class="btn btn-a btn-sm smooth" href="#" id="update">Update</a>
 			</div>
 
     </div>
 
-		<div class="evil" id="formDiv">
+	<div class="evil" id="formDiv">
       <div class="row ">
           <label for="user">User</label>
-          <input class="right" type="text" placeholder="example@mail.com" id="user">
+          <input class="right" type="text" placeholder="user@mail.com" id="user">
 			</div>
 			<div class="row">
           <label for="password">Password</label>
