renovacion token, icono

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
   	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="./img/favicon.ico">
+	<link rel="icon" href="./img/icon-512x512.png">
   	<meta name="theme-color" content="#000">
     <link rel="manifest" href="./manifest.json">
 
