cambio modal por alert, y modificación de iconos

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
 	<div class="spinner hide" id="spinnerDiv"></div>
 
+	<div id="myModal" class="modal">
+
+	  	<!-- Modal content -->
+	  	<div class="modal-content">
+	    	<span id="close-modal" class="close">&times;</span>
+	    	<p id="modal-text">Some text in the Modal..</p>
+	  	</div>
+
+	</div>
+
   <div class="container">
     <div class="hero hide" id="dataDiv">
       <div class="row">
